initial files added

--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -1,17 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="style.css">
+    
+    <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>NPS Chess Society</title>
 </head>
 <body>
     <h1>Events</h1>
 <div class="all_cards">
     <div class="card">
-        <img  class="cardimg" src="favicon.png" alt="Image not supported">
+        <img  class="cardimg" src="{% static 'favicon.png' %}" alt="Image not supported">
         <div class="content">
             <p>INFORMATION GOES HERE</p>
         </div>
@@ -22,7 +24,7 @@
         </div>
     </div>
     <div class="card">
-        <img  class="cardimg" src="favicon.png" alt="Image not supported">
+        <img  class="cardimg" src="{% static 'favicon.png' %}" alt="Image not supported">
         <div class="content">
             <p>INFORMATION GOES HERE</p>
         </div>
@@ -33,7 +35,7 @@
         </div>
     </div>
     <div class="card">
-        <img  class="cardimg" src="favicon.png" alt="Image not supported">
+        <img  class="cardimg" src="{% static 'favicon.png' %}" alt="Image not supported">
         <div class="content">
             <p>INFORMATION GOES HERE</p>
         </div>
@@ -44,7 +46,7 @@
         </div>
     </div>
     <div class="card">
-        <img  class="cardimg" src="favicon.png" alt="Image not supported">
+        <img  class="cardimg" src="{% static 'favicon.png' %}" alt="Image not supported">
         <div class="content">
             <p>INFORMATION GOES HERE</p>
         </div>
