--- a/chess_soc/templates/events.html
+++ b/chess_soc/templates/events.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'events.css' %}">
     <title>NPS Chess Society</title>
 </head>
 <body>
