--- a/chess_soc/static/events.css
+++ b/chess_soc/static/events.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
 body{
-    background-color: rgb(58, 58, 58);
+    background-color: #222327;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -34,7 +34,7 @@ body{
     padding:15px;
     display: flex;
     justify-content: space-between;
-    background: rgba(18, 18, 18,0.2);;
+    background: rgba(78, 78, 78, 0.2);
     border-radius: 10px;
 }
 .link{
@@ -54,5 +54,5 @@ body{
     margin-bottom: 0px;
 }
 h1{
-    color: orange;
+    color: rgb(172, 73, 7);
 }
