--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -15,15 +15,14 @@
     <header>
         <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="40" height="40"><span><!--add text if needed--></span></a>
         <ul class="navbar">
-            <li><a href="#" class="active">Home</a></li>
+            <li><a href="/" class="active">Home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Events</a></li>
+            <li><a href="/events">Events</a></li>
             <li><a href="#">Articles</a></li>
         </ul>
         <div class="main">
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
-    <script type="text/javascript" src="{% static 'javascript1.js' %}"></script>
 </body>
 </html>
