--- a/chess_soc/templates/events.html
+++ b/chess_soc/templates/events.html
@@ -24,7 +24,10 @@
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
-    <h1>Events</h1>
+    <h1>REALREALREAL</h1>
+    <h1>REALREALREAL</h1>
+    <h5>hi</h5>
+    <h5>hi</h5>
 <div class="all_cards">
     <div class="card">
         <img  class="cardimg" src="{% static 'favicon.png' %}" alt="Image not supported">
