--- a/chess_soc/static/home_navbar.css
+++ b/chess_soc/static/home_navbar.css
@@ -28,7 +28,7 @@ header{
     align-items: center;
     justify-content: space-between;
     background: transparent;
-    background-color: var(--bg-color);
+    background-color: rgb(172, 73, 7);
     padding: 28px 12%;
     transition: all .50s ease;
 }
