--- a/chess_soc/templates/events.html
+++ b/chess_soc/templates/events.html
@@ -24,6 +24,8 @@
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
+    <!-- THE FOLLOWING LINES OF CODE IS TO PROVIDE ENOUGH VERTICAL
+         SPACING BETWEEN THE NAVBAR AND THE EVENTS PAGE. THEY SHALL NOT BE REMOVED -->
     <h1>REALREALREAL</h1>
     <h1>REALREALREAL</h1>
     <h5>hi</h5>
