--- a/chess_soc/static/events.css
+++ b/chess_soc/static/events.css
@@ -53,6 +53,10 @@ body{
 .content > p:last-of-type{
     margin-bottom: 0px;
 }
+
+/* THE STYLING FOR H1 AND H5 SHOULD NOT BE CHANGED AS IT ALLOWS THE TEXT 
+REQUIRED FOR SPACING (refer to the comment above <h1> in events.html) TO
+MATCH WITH THE BACKGROUND. */
 h1{
     color: #222327;
 }
