--- a/chess_soc/templates/events.html
+++ b/chess_soc/templates/events.html
@@ -16,7 +16,7 @@
         <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="40" height="40"><span><!--add text if needed--></span></a>
         <ul class="navbar">
             <li><a href="/">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="/about">About Us</a></li>
             <li><a href="/events" class="active">Events</a></li>
             <li><a href="#">Articles</a></li>
         </ul>
@@ -24,12 +24,6 @@
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
-    <!-- THE FOLLOWING LINES OF CODE IS TO PROVIDE ENOUGH VERTICAL
-         SPACING BETWEEN THE NAVBAR AND THE EVENTS PAGE. THEY SHALL NOT BE REMOVED -->
-    <h1>REALREALREAL</h1>
-    <h1>REALREALREAL</h1>
-    <h5>hi</h5>
-    <h5>hi</h5>
 <div class="all_cards">
     <div class="card">
         <img  class="cardimg" src="{% static 'favicon.png' %}" alt="Image not supported">
