--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -16,7 +16,7 @@
         <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="40" height="40"><span><!--add text if needed--></span></a>
         <ul class="navbar">
             <li><a href="/" class="active">Home</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="/about">About Us</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="#">Articles</a></li>
         </ul>
