--- a/chess_soc/templates/about.html
+++ b/chess_soc/templates/about.html
@@ -15,13 +15,10 @@
         <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="40" height="40"><span><!--add text if needed--></span></a>
         <ul class="navbar">
             <li><a href="/">Home</a></li>
-            <li><a href="/about" class="active">About Us</a></li>
+            <li><a href="/about" class="active">Contact</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="#">Articles</a></li>
         </ul>
-        <div class="main">
-            <div class="bx bx-menu" id="menu-icon"></div>
-        </div>
     </header>
 </body>
 </html>
