--- a/chess_soc/templates/events.html
+++ b/chess_soc/templates/events.html
@@ -16,10 +16,13 @@
         <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="40" height="40"><span><!--add text if needed--></span></a>
         <ul class="navbar">
             <li><a href="/">Home</a></li>
-            <li><a href="/about">Contact</a></li>
+            <li><a href="/about">About Us</a></li>
             <li><a href="/events" class="active">Events</a></li>
             <li><a href="#">Articles</a></li>
         </ul>
+        <div class="main">
+            <div class="bx bx-menu" id="menu-icon"></div>
+        </div>
     </header>
 <div class="all_cards">
     <div class="card">
