--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -16,12 +16,13 @@
         <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="40" height="40"><span><!--add text if needed--></span></a>
         <ul class="navbar">
             <li><a href="/" class="active">Home</a></li>
-            <li><a href="/about">Contact</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="#">Articles</a></li>
         </ul>
-        
+        <div class="main">
+            <div class="bx bx-menu" id="menu-icon"></div>
+        </div>
     </header>
-    
 </body>
 </html>
