--- a/chess_soc/static/events.css
+++ b/chess_soc/static/events.css
@@ -1,36 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
-
 body{
     background-color: #222327;
     font-family: 'Montserrat', sans-serif;
 }
 
 .all_cards{
-    padding-top: 10%;
+    padding-top: 5%;
     margin: 0 auto; /*centers for us*/
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 15px;
-    max-width: px;
 }
-.card{
-    box-shadow: 0 0 6px rgba(0,0,0,0.2);
+@media (max-width: 600px){
+    .all_cards{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media (max-width: 350px){
+    .all_cards{
+        grid-template-columns: repeat(1,1fr);
+}}
     
-}
 .cardimg{
     width: 100%;
     display: block;
     border-radius: 10px;
 }
+
 .content{
     line-height: 1.4;
-    font-size: .9em;
+    font-size: .7em;
     padding: 15px;
     background: rgb(80, 80, 80);
     color: azure;
     font-family: 'Montserrat', sans-serif;
     border-radius: 10px;
 }
+
 .extra{
     padding:15px;
     display: flex;
@@ -38,20 +44,28 @@ body{
     background: rgba(78, 78, 78, 0.2);
     border-radius: 10px;
 }
+
 .link{
     text-decoration: none;
     color: cadetblue;
     font-size: .8em;
     font-family: 'Montserrat', sans-serif;
 }
+
 .link:hover{
     color: rgb(186, 255, 82);
     transition-duration: .9s;
+    transform: translateY(5px);
 }
+
 .content > p:first-of-type{
     margin-top: 0px;
 }
+
 .content > p:last-of-type{
     margin-bottom: 0px;
 }
 
+h1{
+    color: rgb(172, 73, 7);
+}
