--- a/chess_soc/templates/about.html
+++ b/chess_soc/templates/about.html
@@ -15,7 +15,7 @@
         <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="40" height="40"><span><!--add text if needed--></span></a>
         <ul class="navbar">
             <li><a href="/">Home</a></li>
-            <li><a href="/about" class="active">About Us</a></li>
+            <li><a href="/about" class="active">Contact</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="#">Articles</a></li>
         </ul>
