--- a/chess_soc/static/home_navbar.css
+++ b/chess_soc/static/home_navbar.css
@@ -117,3 +117,29 @@ header{
         right: 2%;
     }
 }
+@media(max-width:470px){
+    .navbar a{
+        font-size: 1rem;
+    }
+}
+@media(max-width:435px){
+    .navbar a{
+        font-size: .85rem;
+    }
+}
+@media(max-width:400px){
+    .logo img{
+        width: 0px;
+    }
+}
+@media(max-width:370px){
+    .navbar a{
+        font-size: .75rem;
+    }
+}
+
+@media(max-width:346px){
+    .navbar a{
+        font-size: .7rem;
+    }
+}
