--- a/chess_soc/templates/about.html
+++ b/chess_soc/templates/about.html
@@ -17,7 +17,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about" class="active">Contact</a></li>
             <li><a href="/events">Events</a></li>
-            <li><a href="#">Articles</a></li>
+            <li><a href="/articles">Articles</a></li>
         </ul>
         <div class="main">
             <div class="bx bx-menu" id="menu-icon"></div>
