--- a/chess_soc/templates/events.html
+++ b/chess_soc/templates/events.html
@@ -18,7 +18,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">Contact</a></li>
             <li><a href="/events" class="active">Events</a></li>
-            <li><a href="#">Articles</a></li>
+            <li><a href="/articles">Articles</a></li>
         </ul>
         <div class="main">
             <div class="bx bx-menu" id="menu-icon"></div>
