--- a/chess_soc/templates/events.html
+++ b/chess_soc/templates/events.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="50" height="50"><span><!--add text if needed--></span></a>
+        <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="50" height="50"><span>&nbsp;Chess Society<!--add text if needed--></span></a>
         <ul class="navbar">
             <li><a href="/">Home</a></li>
             <li><a href="/about">Contact</a></li>
