--- a/chess_soc/templates/about.html
+++ b/chess_soc/templates/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="50" height="50"><span><!--add text if needed--></span></a>
+        <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="50" height="50"><span>&nbsp;<!--add text if needed-->Chess Society</span></a>
         <ul class="navbar">
             <li><a href="/">Home</a></li>
             <li><a href="/about" class="active">Contact</a></li>
