--- a/chess_soc/static/home_navbar.css
+++ b/chess_soc/static/home_navbar.css
@@ -11,7 +11,7 @@
 :root{
     --bg-color: #222327;
     --text-color: #fff;
-    --main-color: #29fd53;
+    --main-color: #dcb84c;
 }
 body{
     min-height: 100vh;
