--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -7,6 +7,8 @@
     
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
     <link rel="stylesheet" href="{% static 'home_navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap-theme.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <title>NPS Chess Society</title>
@@ -24,5 +26,8 @@
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
+
+    <script src="{% static 'jquery.js' %}"></script>
+    <script src="{% static 'bootstrap.js' %}"></script>
 </body>
 </html>
