--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -26,7 +26,15 @@
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
-
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Welcome to NPSi Chess Society,</h1>
+            <p class="lead">Where passion meets intellect. We intend to unite players of all levels, foster friendly competition, share knowledge, as well as love for the game.</p>
+            <hr class="my-4">
+            <p>Unlock a world of exclusive tournaments, captivating workshops, and invaluable resources made with the goal of maximising your learning experience.</p>
+            <p><br></p>
+        </div>
+    </div>
     <script src="{% static 'jquery.js' %}"></script>
     <script src="{% static 'bootstrap.js' %}"></script>
 </body>
