--- a/chess_soc/static/home_navbar.css
+++ b/chess_soc/static/home_navbar.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 
 *{
     padding: 0;
