about page start

--- a/chess_soc/templates/about.html
+++ b/chess_soc/templates/about.html
@@ -24,5 +24,92 @@
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
+    <div class="all_cards">
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <p class="title">SOHAM MOTE</p>
+                    <p>Club Founder and Academics Head</p>
+                </div>
+                <div class="flip-card-back">
+                    <h2 class="title">Contributions</h2>
+                    <ul class="list_of_contribs">
+                        <li>fax</li>
+                        <li>pack</li>
+                        <li>it</li>
+                        <li>up</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <p class="title">SOHAM MOTE</p>
+                    <p>Club Founder and Academics Head</p>
+                </div>
+                <div class="flip-card-back">
+                    <h2 class="title">Contributions</h2>
+                    <ul class="list_of_contribs">
+                        <li>fax</li>
+                        <li>pack</li>
+                        <li>it</li>
+                        <li>up</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <p class="title">SOHAM MOTE</p>
+                    <p>Club Founder and Academics Head</p>
+                </div>
+                <div class="flip-card-back">
+                    <h2 class="title">Contributions</h2>
+                    <ul class="list_of_contribs">
+                        <li>fax</li>
+                        <li>pack</li>
+                        <li>it</li>
+                        <li>up</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card" class="final_two">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <p class="title">SOHAM MOTE</p>
+                    <p>Club Founder and Academics Head</p>
+                </div>
+                <div class="flip-card-back">
+                    <h2 class="title">Contributions</h2>
+                    <ul class="list_of_contribs">
+                        <li>fax</li>
+                        <li>pack</li>
+                        <li>it</li>
+                        <li>up</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="flip-card" class="final_two">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <p class="title">SOHAM MOTE</p>
+                    <p>Club Founder and Academics Head</p>
+                </div>
+                <div class="flip-card-back">
+                    <h2 class="title">Contributions</h2>
+                    <ul class="list_of_contribs">
+                        <li>fax</li>
+                        <li>pack</li>
+                        <li>it</li>
+                        <li>up</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
