--- a/chess_soc/templates/about.html
+++ b/chess_soc/templates/about.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </div>
-        <div class="flip-card" class="final_two">
+        <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <p class="title">SOHAM MOTE</p>
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <div class="flip-card" class="final_two">
+        <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <p class="title">SOHAM MOTE</p>
