--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
+    <link rel="stylesheet" href="{% static 'home_navbar.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-theme.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -34,6 +35,17 @@
             <p><br></p>
         </div>
     </div>
+    <div class="container-fluid">
+        <section class="yellow"><img src="{% static 'banner.png' %}" width="100%" height="602vh"></section>
+    </div>
+    <div class="container-fluid">
+        <section class="tag red"><img src="{% static 'banner.png' %}" width="100%" height="602vh"></section>
+    </div>
+    <div class="container-fluid">
+        <section class="tag blue"><img src="{% static 'banner.png' %}" width="100%" height="602vh"></section>
+    </div>
+
+    <script src="{% static 'home.js' %}"></script>
     <script src="{% static 'jquery.js' %}"></script>
     <script src="{% static 'bootstrap.js' %}"></script>
 </body>
