--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -6,62 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-theme.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <title>NPS Chess Society</title>
-    <script defer src="{% static 'script.js' %}"></script>
 </head>
 <body>
-    <header class="header">
-        <div class="top-bar">
-          <div class="top-bar__content">
-            <section class="instagram">
-              <a href="https://www.instagram.com/npschesssociety/" class="fa-brands fa-square-instagram fa-xl"></a>
-            
-              <span>@npschesssociety</span>
-            </section>
-            <section class="email">
-              <a href="mailto:npsichesssociety@gmail.com" class="fa-regular fa-envelope fa-xl"></a>
-              <span>npsichesssociety@gmail.com</span>
-            </section>
-          </div>
-        </div>
-    
-        <div class="bottom-bar">
-          <div class="bottom-bar__content">
-            <a href="/" class="logo">
-              <img class="logo__img" src="{% static 'logo.png' %}" alt="logo">
-           
-            </a>
-        
-            <nav class="nav">
-              <ul class="nav__list">
-                <li class="nav__item">
-                  <a class="nav__link" href="/">Home</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="/about">About Us</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="/events">Events</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="/articles">Articles</a>
-                </li>
-              </ul>
-            </nav>
-      
-            <div class="hamburger">
-              <div class="bar"></div>
-              <div class="bar"></div>
-              <div class="bar"></div>
-            </div>
-          </div>
+    <header>
+        <a href="" class="logo"><img src="{% static 'favicon.png' %}" width="50" height="50"><span>&nbsp;<!--add text if needed-->Chess Society</span></a>
+        <ul class="navbar">
+            <li><a href="/" class="active">Home</a></li>
+            <li><a href="/about">Contact</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/articles">Articles</a></li>
+        </ul>
+        <div class="main">
+            <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
     <div class="container">
@@ -73,26 +34,6 @@
             <p><br></p>
         </div>
     </div>
-    <div class="container-fluid">
-        <section class="tag yellow"><img src="{% static 'mugnus.png' %}" width="100%" height="602vh"></section>
-    </div>
-    <div class="container-fluid">
-        <section class="tag red"><img src="{% static 'mugnus.png' %}" width="100%" height="602vh"></section>
-    </div>
-    <div class="container-fluid">
-        <section class="tag blue"><img src="{% static 'mugnus.png' %}" width="100%" height="602vh"></section>
-    </div>
-    <h1>REAL</h1>
-    <div class="container">
-      <div class="jumbotron">
-          <h1>Welcome to NPSi Chess Society.</h1>
-          <p class="lead">Where passion meets intellect. We intend to unite players of all levels, foster friendly competition, share knowledge, as well as love for the game.</p>
-          <hr class="my-4">
-          <p>Unlock a world of exclusive tournaments, captivating workshops, and invaluable resources made with the goal of maximising your learning experience.</p>
-          <p><br></p>
-      </div>
-    </div>
-    <script src="{% static 'home.js' %}"></script>
     <script src="{% static 'jquery.js' %}"></script>
     <script src="{% static 'bootstrap.js' %}"></script>
 </body>
