--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
     <link rel="stylesheet" href="{% static 'bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-theme.css' %}">
+    <link rel="stylesheet" href="{% static 'home_navbar.css' %}"
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <title>NPS Chess Society</title>
