--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -7,6 +7,7 @@
     
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'home_2.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-theme.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -74,13 +75,13 @@
         </div>
     </div>
     <div class="container-fluid">
-        <section class="tag yellow"><img src="{% static 'mugnus.png' %}" width="100%" height="602vh"></section>
+        <section class="tag yellow"><img src="{% static 'fide-chess-tournament.png' %}"></section>
     </div>
     <div class="container-fluid">
-        <section class="tag red"><img src="{% static 'mugnus.png' %}" width="100%" height="602vh"></section>
+        <section class="tag red"><img src="{% static 'mugnus.png' %}"></section>
     </div>
     <div class="container-fluid">
-        <section class="tag blue"><img src="{% static 'mugnus.png' %}" width="100%" height="602vh"></section>
+        <section class="tag blue"><img src="{% static 'mugnus.png' %}"></section>
     </div>
     <h1>REAL</h1>
     <div class="container">
