--- a/chess_soc/templates/about.html
+++ b/chess_soc/templates/about.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="flip-card-final">
+        <div class="flip-card-slast">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <p class="title">SOHAM MOTE</p>
@@ -131,7 +131,7 @@
                 </div>
             </div>
         </div>
-        <div class="flip-card-final">
+        <div class="flip-card-last">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <p class="title">SOHAM MOTE</p>
