--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -75,7 +75,18 @@
         </div>
     </div>
     <div class="container-fluid">
-        <section class="tag yellow"><img src="{% static 'fide-chess-tournament.png' %}"></section>
+          <div class="tooltip">
+            <img src="{% static 'fide-chess-tournament.png' %}">
+            <h3 class="tooltiptext">
+              <i><u>Tournaments</u></i>
+            </h3>
+            <p class="tooltiptext">
+              More info goes here
+            </p>
+            <p class="tooltiptext">
+              And also here asdas
+            </p>
+          </div>
     </div>
     <div class="container-fluid">
         <section class="tag red"><img src="{% static 'mugnus.png' %}"></section>
