--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -75,35 +75,54 @@
         </div>
     </div>
     <div class="container-fluid">
+      <section class="tag yellow">
+        <div class="tooltip">
+          <img src="{% static 'fide-chess-tournament.png' %}">
+          <h3 class="tooltiptext">
+            <i><u>Tournaments</u></i>
+          </h3>
+          <p class="tooltiptext">
+            More info goes here
+          </p>
+          <p class="tooltiptext">
+            And also here asdas
+          </p>
+        </div>
+      </section>
+    </div>
+    <div class="container-fluid">
+        <section class="tag red">
           <div class="tooltip">
-            <img src="{% static 'fide-chess-tournament.png' %}">
+            <img src="{% static 'mugnus.png' %}">
             <h3 class="tooltiptext">
-              <i><u>Tournaments</u></i>
+              <i><u>Workshops</u></i>
             </h3>
             <p class="tooltiptext">
-              More info goes here
+              Mugnus more like Mug-
             </p>
             <p class="tooltiptext">
-              And also here asdas
+              national university of singapore
             </p>
           </div>
+        </section>
     </div>
     <div class="container-fluid">
-        <section class="tag red"><img src="{% static 'mugnus.png' %}"></section>
-    </div>
-    <div class="container-fluid">
-        <section class="tag blue"><img src="{% static 'mugnus.png' %}"></section>
+        <section class="tag blue">
+          <div class="tooltip">
+            <img src="{% static 'mugnus.png' %}">
+            <h3 class="tooltiptext">
+              <i><u>Resources</u></i>
+            </h3>
+            <p class="tooltiptext">
+              ACC MONKEY MORE LIKE
+            </p>
+            <p class="tooltiptext">
+              BLACK MONKEY
+            </p>
+          </div>
+        </section>
     </div>
     <h1>REAL</h1>
-    <div class="container">
-      <div class="jumbotron">
-          <h1>Welcome to NPSi Chess Society.</h1>
-          <p class="lead">Where passion meets intellect. We intend to unite players of all levels, foster friendly competition, share knowledge, as well as love for the game.</p>
-          <hr class="my-4">
-          <p>Unlock a world of exclusive tournaments, captivating workshops, and invaluable resources made with the goal of maximising your learning experience.</p>
-          <p><br></p>
-      </div>
-    </div>
     <script src="{% static 'home.js' %}"></script>
     <script src="{% static 'jquery.js' %}"></script>
     <script src="{% static 'bootstrap.js' %}"></script>
