--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -77,7 +77,7 @@
     <div class="container-fluid">
       <section class="tag yellow">
         <div class="tooltip">
-          <img src="{% static 'fide-chess-tournament.png' %}">
+          <img src="{% static 'touney_pt2.png' %}">
           <h3 class="tooltiptext">
             <i><u>Tournaments</u></i>
           </h3>
